[tool.poetry]
name = "hefeng-weather"
version = "0.1.0"
description = "使用和风天气api来进行天气查询和提醒的hoshino插件"
authors = ["Iona <724207289@qq.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
priority = "default"


[tool.poetry.dependencies]
python = "^3.9"
nonebot = {version = "1.8.0", extras = ["scheduler"]}
aiohttp = "^3.8.4"
pydantic = "^1.10.9"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
ruff = "^0.0.278"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = [
    "E", "W", # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "PYI",    # flask8-pyi
    "Q",      # flake8-quotes
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "ISC",    # flake8-implicit-str-concat
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "ASYNC"   # flake8-async
]
ignore = ["E402", "B008", "F403", "F405", "RET505"]

line-length = 79
target-version = "py38"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"
