[tool.poetry]
name = "hefeng-weather"
version = "0.1.0"
description = "使用和风天气api来进行天气查询和提醒的hoshino插件"
authors = ["Iona <724207289@qq.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
priority = "default"


[tool.poetry.dependencies]
python = "^3.9"
nonebot = {version = "1.8.0", extras = ["scheduler"]}
aiohttp = "^3.8.4"
pydantic = "^1.10.9"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
ruff = "^0.0.278"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ASYNC",   # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flask8-pyi
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "COM",    # flake8-commas
]
ignore = ["E402", "D100", "D415"]
line-length = 79
target-version = "py38"
show-fixes = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
